# old_GekkoFS_old

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  compile_gkfs_0.6slurm.sh  paths_shared.sh  paths_shared_0.6slurm.sh
CMake/: FindAGIOS.cmake  FindAbt.cmake  FindDate.cmake  FindJeMalloc.cmake  FindLZ4.cmake  FindMargo.cmake  FindRocksDB.cmake  FindSnappy.cmake  FindSyscall_intercept.cmake  FindZStd.cmake  GkfsPythonTesting.cmake
config/GekkoFWD/agios/: access_times.func  agios.conf
docker/: build_env.docker  debian_build_env.docker
include/: config.hpp  version.hpp.in
include/client/: adafs_functions.hpp  env.hpp  gkfs_functions.hpp  hooks.hpp  intcp_functions.hpp  intercept.hpp  logging.hpp  make_array.hpp  open_dir.hpp  open_file_map.hpp  path.hpp  preload.hpp  preload_context.hpp  preload_util.hpp  resolve.hpp  syscall_names.hpp  syscalls.hpp
include/client/rpc/: forward_data.hpp  forward_management.hpp  forward_metadata.hpp  hg_rpcs.hpp  ld_rpc_data_ws.hpp  ld_rpc_management.hpp  ld_rpc_metadentry.hpp  rpc_types.hpp
include/client/syscalls/: args.hpp  decoder.hpp  errno.hpp  rets.hpp  syscall.hpp
include/client/syscalls/detail/: syscall_info.h
include/daemon/: daemon.hpp  env.hpp  main.hpp  util.hpp
include/daemon/backend/: exceptions.hpp
include/daemon/backend/data/: chunk_storage.hpp  data_module.hpp  file_handle.hpp
include/daemon/backend/metadata/: db.hpp  merge.hpp
include/daemon/classes/: fs_data.hpp  rpc_data.hpp
include/daemon/handler/: rpc_defs.hpp  rpc_util.hpp
include/daemon/ops/: data.hpp  metadentry.hpp
include/daemon/scheduler/: agios.hpp
include/global/: chunk_calc_util.hpp  cmake_configure.hpp.in  configure.hpp.in  env_util.hpp  global_defs.hpp  log_util.hpp  metadata.hpp  path_util.hpp
include/global/rpc/: distributor.hpp  rpc_types.hpp  rpc_util.hpp  rpc_utils.hpp
scripts/: benchmark_check.sh  compile_dep.sh  dl_dep.sh  shutdown_gkfs.py  startup_gkfs.py
scripts/license/: add_license_headers.sh  copyright_header_syntax.yml  header
scripts/patches/: handle_cache.patch  syscall_intercept.patch
scripts/util/: util.py
src/client/: CMakeLists.txt  adafs_functions.cpp  gkfs_functions.cpp  hooks.cpp  intercept.cpp  logging.cpp  open_dir.cpp  open_file_map.cpp  path.cpp  preload.cpp  preload_context.cpp  preload_util.cpp  resolve.cpp
src/client/rpc/: forward_data.cpp  forward_management.cpp  forward_metadata.cpp  hg_rpcs.cpp  ld_rpc_data_ws.cpp  ld_rpc_management.cpp  ld_rpc_metadentry.cpp  rpc_types.cpp
src/client/syscalls/detail/: syscall_info.c
src/daemon/: CMakeLists.txt  daemon.cpp  main.cpp  util.cpp
src/daemon/backend/data/: CMakeLists.txt  chunk_storage.cpp  data_module.cpp
src/daemon/backend/metadata/: CMakeLists.txt  db.cpp  merge.cpp
src/daemon/classes/: fs_data.cpp  rpc_data.cpp
src/daemon/handler/: h_data.cpp  h_metadentry.cpp  h_preload.cpp  srv_data.cpp  srv_management.cpp  srv_metadata.cpp
src/daemon/ops/: data.cpp  metadentry.cpp
src/daemon/scheduler/: agios.cpp
src/global/: CMakeLists.txt  env_util.cpp  log_util.cpp  metadata.cpp  path_util.cpp
src/global/rpc/: distributor.cpp  rpc_util.cpp  rpc_utils.cpp
test/: CMakeLists.txt  IO_test.cpp  README.md  dir_test.cpp  lseek.cpp  main.cpp  main_IO_testing.cpp  main_MPI.cpp  main_temp.cpp  path_resolution.cpp  symlink_test.cpp  truncate.cpp  wr_test.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: CMakeLists.txt  conftest.py  conftest.py.in  pytest.ini.in  pytest.install.ini.in  requirements.txt.in
tests/integration/data/: README.md  test_data_integrity.py  test_truncate.py
tests/integration/directories/: README.md  test_directories.py
tests/integration/forwarding/: test_map.py
tests/integration/harness/: CMakeLists.txt  README.md  cli.py  cmd.py  gkfs.py  io.py  logger.py  reporter.py  workspace.py
tests/integration/harness/gkfs.io/: binary_buffer.hpp  command.hpp  commands.hpp  lseek.cpp  main.cpp  mkdir.cpp  open.cpp  opendir.cpp  pread.cpp  preadv.cpp  pwrite.cpp  pwritev.cpp  read.cpp  readdir.cpp  readv.cpp  reflection.hpp  rmdir.cpp  serialize.hpp  stat.cpp  statx.cpp  truncate.cpp  write.cpp  write_random.cpp  write_validate.cpp  writev.cpp
tests/integration/harness/gkfs.io/util/: file_compare.cpp
tests/integration/operations/: README.md  test_read_operations.py  test_write_operations.py
tests/integration/position/: README.md  test_lseek.py
tests/integration/shell/: README.md  test_concat.py  test_cp.py  test_stat.py
tests/integration/status/: README.md  test_status.py
tests/unit/: CMakeLists.txt  test_example_00.cpp  test_example_01.cpp
